--- a/serverless.yml
+++ b/serverless.yml
@@ -130,6 +130,7 @@ resources:
               Principal:
                 Service:
                   - "lambda.amazonaws.com"
+                  - "apigateway.amazonaws.com"
               Action:
                 - "sts:AssumeRole"
         Policies:
