--- a/serverless.yml
+++ b/serverless.yml
@@ -39,6 +39,9 @@ custom:
                 }
               }
 
+plugins:
+  - serverless-apigateway-service-proxy
+
 provider:
   name: aws
   runtime: python3.8
