--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     name: deploy
     runs-on: ubuntu-latest
     env:
-      NODE_VERSION: 14.x
+      NODE_VERSION: 16
     strategy:
       matrix:
         python-version:
