--- a/serverless.yml
+++ b/serverless.yml
@@ -17,7 +17,7 @@ custom:
     - sqs:
         path: /queue
         method: post
-        queueName: !GetAtt MyQueue.QueueName
+        queueName: !GetAtt SQSQueue.Queue
         cors: true
         response:
           template:
@@ -142,6 +142,9 @@ resources:
         Type: "COGNITO_USER_POOLS"
         ProviderARNs:
           - arn:aws:cognito-idp:${self:custom.region}:${self:custom.account-id}:userpool/${self:custom.userpool-id}
+
+    SQSQueue:
+      Type: "AWS::SQS::Queue"
 
     ApiGatewayDeployment:
       Type: "AWS::ApiGateway::Deployment"
