--- a/serverless.yml
+++ b/serverless.yml
@@ -17,7 +17,7 @@ custom:
     - dynamodb:
         path: /customer/{id}
         method: get
-        tableName: { Ref: "nguyen-tran-clinic" }
+        tableName: "nguyen-tran-clinic"
         hashKey:
           pathParam: id
           attributeType: S
@@ -30,7 +30,7 @@ custom:
     - dynamodb:
         path: /dynamodb
         method: get
-        tableName: { Ref: "nguyen-tran-clinic" }
+        tableName: "nguyen-tran-clinic"
         hashKey:
           queryStringParam: id # use query string parameter
           attributeType: S
