--- a/serverless.yml
+++ b/serverless.yml
@@ -35,7 +35,7 @@ custom:
           queryStringParam: PK # use query string parameter
           attributeType: S
         rangeKey:
-          queryStringParam: SK
+          queryStringParam: PK
           attributeType: S
         action: GetItem
         cors: true
