--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ custom:
   region: ap-southeast-1
   account-id: "014183400304"
   userpool-id: "ap-southeast-1_mFSJmjfFb"
-  client-id: "4ah7dhech707uc12tfnbua97s6"
+  client-id: "vm01gdalvfa01cj5q948t8v3v"
   pythonRequirements:
     slim: true
     strip: true
@@ -51,8 +51,8 @@ provider:
   tracing:
     lambda: true
   environment:
-    USER_POOL_ID: "ap-southeast-1_mFSJmjfFb"
-    CLIENT_ID: "4ah7dhech707uc12tfnbua97s6"
+    USER_POOL_ID: {self:custom.userpool-id}
+    CLIENT_ID: {self:custom.client-id}
 
 package:
   individually: true
