--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
 
   lint:
     needs: setup_and_dependencies
-    name: "Test: Lint"
+    name: "Linting with Flake8"
     runs-on: ubuntu-latest
     steps:
       - name: Cache pip
@@ -67,7 +67,7 @@ jobs:
 
   pytest:
     needs: setup_and_dependencies
-    name: "Test: Pytest"
+    name: "Unittest with Pytest"
     runs-on: ubuntu-latest
     steps:
       - name: Cache pip
@@ -90,6 +90,23 @@ jobs:
       - name: Run tests with pytest
         if: steps.check_tests.outputs.has_tests == 'true'
         run: pytest
+
+  security_scans:
+    needs: setup_and_dependencies
+    name: "Security Scans with CodeQL"
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v1
+        with:
+          languages: "python"
+
+      - name: Perform CodeQL Scan
+        uses: github/codeql-action/analyze@v1
 
   deploy:
     needs: [lint, pytest]
