--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,6 +123,8 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        with:
           languages: python
           # Override the default behavior so that the action doesn't attempt
           # to auto-install Python dependencies
