--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,46 +91,46 @@ jobs:
         if: steps.check_tests.outputs.has_tests == 'true'
         run: pytest
 
-  security_scans:
-    needs: setup_and_dependencies
-    name: "Security Scans with CodeQL"
-    runs-on: ubuntu-latest
-    permissions:
-      security-events: write
-      actions: read
+  # security_scans:
+  #   needs: setup_and_dependencies
+  #   name: "Security Scans with CodeQL"
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     security-events: write
+  #     actions: read
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
+  #       with:
+  #         token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.8'
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: '3.8'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ];
-          then pip install -r requirements.txt;
-          fi
-          # Set the `CODEQL-PYTHON` environment variable to the Python executable
-          # that includes the dependencies
-          echo "CODEQL_PYTHON=$(which python)" >> $GITHUB_ENV
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         if [ -f requirements.txt ];
+  #         then pip install -r requirements.txt;
+  #         fi
+  #         # Set the `CODEQL-PYTHON` environment variable to the Python executable
+  #         # that includes the dependencies
+  #         echo "CODEQL_PYTHON=$(which python)" >> $GITHUB_ENV
 
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          languages: python
-          # Override the default behavior so that the action doesn't attempt
-          # to auto-install Python dependencies
-          setup-python-dependencies: false
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+  #     - name: Initialize CodeQL
+  #       uses: github/codeql-action/init@v2
+  #       with:
+  #         languages: python
+  #         # Override the default behavior so that the action doesn't attempt
+  #         # to auto-install Python dependencies
+  #         setup-python-dependencies: false
+  #         token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
-      - name: Perform CodeQL Scan
-        uses: github/codeql-action/analyze@v1
+  #     - name: Perform CodeQL Scan
+  #       uses: github/codeql-action/analyze@v1
 
   sonarqube:
     needs: setup_and_dependencies
@@ -147,12 +147,11 @@ jobs:
       with:
         host: ${{ secrets.SONARQUBE_HOST }}
         login: ${{ secrets.SONARQUBE_TOKEN }}
-        organization: ${{ secrets.SONARQUBE_ORG }}
-        # args:
-        #   -Dsonar.organization=${{ secrets.SONARQUBE_ORG }}
+        args:
+          -Dsonar.organization=${{ secrets.SONARQUBE_ORG }}
 
   deploy:
-    needs: [lint, pytest, security_scans, sonarqube]
+    needs: [lint, pytest, sonarqube]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
