--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -149,6 +149,7 @@ jobs:
         # login: ${{ secrets.SONARQUBE_TOKEN }}
         args: >
           -Dsonar.organization=${{ secrets.SONARQUBE_ORG }}
+          -Dsonar.projectKey=${{ secrets.SONARQUBE_PROJECT_KEY }} 
           -X
       env:
         GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
