--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,23 +137,14 @@ jobs:
     name: "Security Scans with SonarQube"
     runs-on: ubuntu-latest
     steps:
-    - name: Checking out
-      uses: actions/checkout@master
-      with:
-        # Disabling shallow clone is recommended for improving relevancy of reporting
-        fetch-depth: 0
-    - name: SonarQube Scan
-      uses: sonarsource/sonarcloud-github-action@master
-      with:
-        # host: ${{ secrets.SONARQUBE_HOST }}
-        # login: ${{ secrets.SONARQUBE_TOKEN }}
-        args: >
-          -Dsonar.organization=${{ secrets.SONARQUBE_ORG }}
-          -Dsonar.projectKey=${{ secrets.SONARQUBE_PROJECT_KEY }} 
-          -X
-      env:
-        GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
 
   deploy:
     needs: [lint, pytest, sonarqube]
