--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,6 +106,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
 
   deploy:
+    name: "Deploy to AWS"
     needs: [lint, pytest, sonarqube]
     runs-on: ubuntu-latest
     steps:
